--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -5,11 +5,22 @@
 .btn-sm {
   @apply rounded-sm px-4 py-1.5 text-sm;
 }
-
+.bg-custom-gradient {
+  background-image: linear-gradient(63deg, #f88ee6, #6179fe);
+  border: 0;
+  border-radius: 30px ;
+}
+.btn-border
+{
+  //border: 2;
+  border-radius: 50px ;
+  letter-spacing : 1px ;
+}
 .btn-primary {
-  @apply border-primary bg-primary text-white dark:border-darkmode-primary dark:bg-white dark:text-dark;
+  @apply  bg-custom-gradient  bg-primary text-white dark:border-darkmode-primary dark:bg-white dark:text-dark;
 }
 
+
 .btn-outline-primary {
-  @apply border-dark bg-transparent text-dark hover:bg-dark hover:text-white dark:border-white dark:text-white dark:hover:bg-white dark:hover:text-dark;
+  @apply btn-border border-dark bg-transparent text-dark hover:bg-dark hover:text-white dark:border-white dark:text-white dark:hover:bg-white dark:hover:text-dark;
 }
