--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -8,6 +8,7 @@
   grid-template-rows: repeat(2, 1fr);
   gap: 1.5rem;
  // background: linear-gradient(135deg, rgb(238, 0, 153), rgb(221, 0, 238));
+  //background-color: linear-gradient(63deg, #f88ee6, #6179fe);
 
   .grid-container {
       display: grid;
@@ -17,23 +18,43 @@
 
       .box { 
           height: 200px; 
-          background-color: white;
+          //background-color: white;
+  background: linear-gradient(63deg, #f88ee6, #6179fe);
+
           border-radius: 30px;
           border: 1.2rem;
           box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
           .title {
             display: flex;
+            flex-direction: column-reverse;
+
             justify-content: center;
             align-items: center;
-            h{
+          
+            H2{
                 font-size: 1.7em ; 
-                padding-top: 8px;
+                padding-top: 18px;
+                padding-bottom: 8px;
+                text-decoration: white; 
+                color: #ffffff;
+                flex-direction: row-reverse;
+
+
+            }
+            H5{
+                font-size: 1em ;  
+                padding: 8px;
+                text-decoration: white; 
+                color: #ffffff;
+                flex-direction: row-reverse;
+
+ 
             }
 
           }
           .placeholder
           {
-            background: linear-gradient(135deg, rgb(238, 0, 153), rgb(221, 0, 238));
+            background-image: linear-gradient(63deg, #f88ee6, #6179fe);
             width: 40%;
           }
       }
@@ -53,6 +74,7 @@
       height: calc(100% - 10rem);
       border: 1.2rem;
       background-color: white;
+      
       border-radius: 30px;
       box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   }
