--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -79,3 +79,124 @@
       box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   }
 }
+
+.frame-container
+{ 
+  display: grid; 
+  width: 100%;
+  height: 100%;
+  grid-template-rows: 1fr 4fr; 
+
+  .first-row {
+    display: grid; 
+    grid-template-rows: 1fr ; 
+    grid-template-columns:1fr 2fr;
+    padding: 7px;
+    .item-1{
+      //background-color: transparent;
+      //border: 1px solid #ccc;
+      border-radius: 0 75px 0 75px;  
+      //box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
+      padding: 13px;
+      background: linear-gradient(250deg, #30cac5 , #f8f4bd);
+      background-repeat: no-repeat;
+      transition: box-shadow 0.3s ease;
+      backdrop-filter: blur(100px); 
+      justify-content: center;
+      align-items: center;
+      padding-left: 40%;
+      padding-top: 27px;
+      .switch {
+        
+        width: 35px;
+        height: 75px;
+        background-color: rgba(255, 255, 255, 0.4);
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: column;
+        border-radius: 50px;
+        padding: 5px;
+        cursor: pointer;
+      }
+      .switch[data-ison="true"] {
+        justify-content: flex-start;
+      }
+      .ball {
+        width: 25px;
+        height: 25px;
+        background-color: white; 
+        border-radius: 40px;
+      }
+       
+    }
+    .item-2{
+      background-color: rgba(255, 0, 130 , 0.8);
+      background-repeat: no-repeat;
+      padding: 17px;
+      border-radius: 130px 130px 130px 0;   
+      .card{
+       border-radius: 130px 130px 130px 130px  ;  
+       background: linear-gradient(54deg,#ff0082 , #ffffff ,  #ffffff ); 
+       backdrop-filter: blur(100px);
+       width: 85%;
+       height: 100%;
+       display: flex;
+       padding: 20px;  
+       justify-content: center;
+       align-items: center; 
+       .pic{
+        padding-right: 2rem;
+        .ball {
+          display: flex;
+          width: 55px;
+          height: 55px;
+          background-color: white; 
+          border-radius: 40px;
+        }
+
+       }
+       .content{
+
+       }
+      }
+      
+      
+    }
+  }
+  .second-row {
+    display: grid; 
+    grid-template-rows: 4fr ; 
+    grid-template-columns:1fr 1fr 1fr;
+      .first-col
+      {
+        display: grid; 
+        grid-template-rows: 1fr 1fr 1fr ;
+        .card{
+          background-color: #fb8c55          ;
+          background-repeat: no-repeat; 
+          border-radius: 130px 130px 0 130px;   
+        } 
+        .card-2{
+          background-color: #ff0082          ;
+          background-repeat: no-repeat; 
+          border-radius: 130px 0 130px 130px;   
+        } 
+      }
+      .second-col
+      {
+        display: grid; 
+        grid-template-rows: 1fr 2fr ; 
+        .card{
+          background-color: #fb8c55          ;
+          background-repeat: no-repeat; 
+          border-radius: 130px 0 130px 130px;   
+        } 
+       
+      }
+      .third-col
+      {
+        display: grid; 
+        grid-template-rows: 2fr 1fr ; 
+      }
+  }
+}
